--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
             app:destination="@id/nav_home_second" />
+        <action
+            android:id="@+id/action_nav_home_to_nav_imagenes"
+            app:destination="@id/nav_imagenes" />
     </fragment>
     <fragment
         android:id="@+id/nav_home_second"
@@ -40,4 +43,10 @@
         android:name="com.example.safehawk.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_imagenes"
+        android:name="com.example.safehawk.ui.imagenes.Imagenes"
+        android:label="Galería de imágenes"
+        tools:layout="@layout/fragment_imagenes" />
 </navigation>
