Navegación con los activitys.                                            Funciona Agregar imagen, ubicación y notas.  Layout de añadir contraseñas.  Cambios en algunos layouts.
 Las navegaciones de los layouts se añadieron, y para la sinc. en la nube se hizo el registro y el login.

--- a/app/src/main/res/layout/activity_inicio_nube.xml
+++ b/app/src/main/res/layout/activity_inicio_nube.xml
@@ -43,4 +43,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <Button
+        android:id="@+id/id_ver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="33dp"
+        android:background="@drawable/boton"
+        android:text="Elementos en la nube"
+        android:textColor="@color/colorLetras"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id_sinc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
