--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -142,7 +142,7 @@
         android:layout_height="19dp"
         android:layout_marginTop="9dp"
         android:layout_marginEnd="53dp"
-        android:text="Videos"
+        android:text="Galería"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_video" />
